Fix spacing and border

--- a/src/main/landing/landing.styles.scss
+++ b/src/main/landing/landing.styles.scss
@@ -7,7 +7,7 @@
     "team";
 
   @include breakpoint(md) {
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto 1fr auto;
     grid-template-areas:
       "about cta"
       "about gif"
@@ -83,9 +83,8 @@
       padding: $vertical-padding $horizontal-padding-desktop;
     }
 
-    @include breakpoint(lg) {
+    @include breakpoint(xl) {
       border-right: $border-size solid black;
-      padding: $vertical-padding $horizontal-padding-desktop;
     }
   }
 }
